# canonical-form

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: graphs.rs
src/: example.rs  lib.rs  refine.rs
tests/: graph.rs
