[package]
name = "canonical-form"
version = "0.8.0"
authors = ["Rémi de Verclos <remi.de.joannis.de.verclos@ens-lyon.org>"]
readme = "README.md"
description = "Reduce graphs and other combinatorial structures modulo isomorphism."
license = "MIT"
repository = "https://github.com/avangogo/canonical-form"
documentation = "https://docs.rs/canonical-form"
keywords = ["graph", "group"]
publish = true
edition = "2018"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.2"

[[bench]]
name = "graphs"
harness = false