[package]
name = "canonical-form"
version = "0.10.0"
authors = ["Rémi de Verclos <remi.de.joannis.de.verclos@ens-lyon.org>"]
readme = "README.md"
description = "Reduce graphs and other combinatorial structures modulo isomorphism."
license = "MIT"
repository = "https://github.com/avangogo/canonical-form"
documentation = "https://docs.rs/canonical-form"
keywords = ["graph", "group", "combinatorics"]
publish = true
edition = "2021"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "graphs"
harness = false
