[package]
name = "canonical-form"
version = "0.10.1"
description = "Reduce graphs and other combinatorial structures modulo isomorphism."
repository = "https://github.com/avangogo/canonical-form"
license = "MIT"
readme = "README.md"
authors = ["Rémi de Verclos <remi.de.joannis.de.verclos@ens-lyon.org>"]
documentation = "https://docs.rs/canonical-form"
keywords = ["graph", "group", "combinatorics"]
categories = ["algorithms", "mathematics"]
edition = "2021"
publish = true

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "graphs"
harness = false